@@ -1,3 +1,6 @@
+nxMyDB 1.0.0 (not released):
+  CHG: Rearranged structure members to save a few bytes on alignment.
+
 nxMyDB v0.4.0 (Nov 14, 2007):
   NEW: Compiled as a release build (alpha releases were debug builds).
   NEW: New topics in the FAQ section of the readme.
